# grass-latte-py

./: .gitignore  .html-source  README.md  backend.py  copy_html.py  get_html.py  index.html  main.py  pyproject.toml  webpage.py
grass_latte/: __init__.py
grass_latte/_communication/: __init__.py  communication.py
grass_latte/_communication/_backend/: __init__.py  communication_backend.py
grass_latte/_communication/_interface/: interface.py
grass_latte/_port_range/: __init__.py
grass_latte/_webpage/: index.py  serve.py
grass_latte/communication/: communication_backend.py
grass_latte/webpage/: index.py  serve.py
tests/: run_example.py
