[tool.poetry]
name = "grass-latte"
version = "0.1.0"
description = ""
authors = ["Robert-M-Lucas <100799838+Robert-M-Lucas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
